# beeware-tutorial

./: README.md
helloworld/: LICENSE  README.rst  pyproject.toml
helloworld/src/helloworld/: app.py
helloworld/src/helloworld.dist-info/: METADATA
